_generated-doc/3.0/config/quarkus-smallrye-metrics-small-rye-metrics-processor-small-rye-metrics-config.adoc

:summaryTableId: quarkus-smallrye-metrics-small-rye-metrics-processor-small-rye-metrics-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-metrics-small-rye-metrics-processor-small-rye-metrics-config_configuration]]link:#quarkus-smallrye-metrics-small-rye-metrics-processor-small-rye-metrics-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-metrics-small-rye-metrics-processor-small-rye-metrics-config_quarkus.smallrye-metrics.path]]`link:#quarkus-smallrye-metrics-small-rye-metrics-processor-small-rye-metrics-config_quarkus.smallrye-metrics.path[quarkus.smallrye-metrics.path]`

[.description]
--
The path to the metrics handler.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_METRICS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_METRICS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`metrics`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-metrics-small-rye-metrics-processor-small-rye-metrics-config_quarkus.smallrye-metrics.extensions.enabled]]`link:#quarkus-smallrye-metrics-small-rye-metrics-processor-small-rye-metrics-config_quarkus.smallrye-metrics.extensions.enabled[quarkus.smallrye-metrics.extensions.enabled]`

[.description]
--
Whether metrics published by Quarkus extensions should be enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_METRICS_EXTENSIONS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_METRICS_EXTENSIONS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-metrics-small-rye-metrics-processor-small-rye-metrics-config_quarkus.smallrye-metrics.micrometer.compatibility]]`link:#quarkus-smallrye-metrics-small-rye-metrics-processor-small-rye-metrics-config_quarkus.smallrye-metrics.micrometer.compatibility[quarkus.smallrye-metrics.micrometer.compatibility]`

[.description]
--
Apply Micrometer compatibility mode, where instead of regular 'base' and 'vendor' metrics, Quarkus exposes the same 'jvm' metrics that Micrometer does. Application metrics are unaffected by this mode. The use case is to facilitate migration from Micrometer-based metrics, because original dashboards for JVM metrics will continue working without having to rewrite them.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_METRICS_MICROMETER_COMPATIBILITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_METRICS_MICROMETER_COMPATIBILITY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-metrics-small-rye-metrics-processor-small-rye-metrics-config_quarkus.smallrye-metrics.jaxrs.enabled]]`link:#quarkus-smallrye-metrics-small-rye-metrics-processor-small-rye-metrics-config_quarkus.smallrye-metrics.jaxrs.enabled[quarkus.smallrye-metrics.jaxrs.enabled]`

[.description]
--
Whether detailed JAX-RS metrics should be enabled. 
See link:https://github.com/eclipse/microprofile-metrics/blob/2.3.x/spec/src/main/asciidoc/required-metrics.adoc#optional-rest[MicroProfile Metrics: Optional REST metrics].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_METRICS_JAXRS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_METRICS_JAXRS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===